fix: align header

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -5,6 +5,8 @@
 }
 
 .container h1 {
+    margin-top: 0;
+    text-align: center;
     font-size: 96px;
     color: white;
 }
